<resources>
    <string name="app_name">app_1</string>
    <string name="tv_first_name_label">Imię:</string>
    <string name="et_first_name_hint">Wpisz imię</string>
    <string name="tv_last_name_label">Nazwisko:</string>
    <string name="et_last_name_hint">Wpisz nazwisko</string>
    <string name="tv_number_of_grades_label">Liczba ocen:</string>
    <string name="et_number_of_grades_hint">Wprowadź liczbę ocen (5-15)</string>
    <string name="btn_submit_label">OCENY</string>
    <string name="et_first_name_error_text">Imię nie może być puste!</string>
    <string name="et_last_name_error_text">Nazwisko nie może być puste!</string>
    <string name="et_number_of_grades_error_text">Liczba ocen nie może być pusta!</string>
    <string name="et_number_of_grades_format_error_text">Liczba ocen musi być liczbą od 5 do 15!</string>
</resources>