<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/ll_main"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/ll_first_name"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_first_name"
            android:text="@string/tv_first_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/et_first_name"
            android:hint="@string/et_first_name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_last_name"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_last_name"
            android:text="@string/tv_last_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/et_last_name"
            android:hint="@string/et_last_name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_number_of_grades"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_number_of_grades"
            android:text="@string/tv_number_of_grades_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/et_number_of_grades"
            android:hint="@string/et_number_of_grades_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_submit"
        android:visibility="invisible"
        android:text="@string/btn_submit_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>